syntax = "proto3";

package golem.registry.v1;

import "golem/common/error_body.proto";

message RegistryServiceError {
  oneof error {
    golem.common.ErrorsBody bad_request = 1;
    golem.common.ErrorBody unauthorized = 2;
    golem.common.ErrorBody limit_exceeded = 3;
    golem.common.ErrorBody not_found = 4;
    golem.common.ErrorBody already_exists = 5;
    golem.common.ErrorBody internal_error = 6;
    golem.common.ErrorBody could_not_authenticate = 7;
  }
}
