syntax = "proto3";

package golem.token;

import "golem/common/uuid.proto";

message TokenSecret {
  golem.common.UUID value = 1;
}
